Updated logo in topbar to MeshMix

--- a/www/templates/player.html
+++ b/www/templates/player.html
@@ -1,7 +1,7 @@
 <ion-view>
-  <ion-nav-bar class="bar-calm bar-newsic player-container" align-title="center">
+  <ion-nav-bar class="bar-calm bar-custom player-container" align-title="center">
     <ion-nav-buttons side="left"><a class="button button-icon icon ion-ios-settings-strong" ng-click="settings()"></a></ion-nav-buttons>
-    <ion-nav-title><img class="logo-small" src="img/newsic-logo-small.png"></ion-nav-title>
+    <ion-nav-title><img class="logo-small" src="img/meshmix-logo-small.png"></ion-nav-title>
 
     <ion-nav-buttons side="right"><a class="button button-icon icon ion-music-note" href="#/lists"></a></ion-nav-buttons>
 <!--    <ion-nav-buttons side="right">
