--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -29,7 +29,7 @@
   </ion-content>-->
 
   <ion-content>
-    <img src="img/newsic-logo-small.png" alt="" width="100px" style="position:relative;left:50%;margin:40px 0 0 -50px;">
+    <img src="img/meshmix-logo-login.png" alt="" width="200px" style="position:relative;left:50%;margin:40px 0 20px -100px;">
 
 <!-- @TODO: CUSTOM LOGIN
     <form name="welcomeForm">
