--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar class="bar-calm bar-newsic">
+  <ion-header-bar class="bar-calm bar-custom">
     <h1 class="title">Settings</h1>
     <div class="buttons">
       <button class="button button-clear" ng-click="closeSettings()">Close</button>
