--- a/www/templates/lists.html
+++ b/www/templates/lists.html
@@ -1,8 +1,8 @@
 <ion-view view-title="Playlist" name="playlist-view">
 
-  <ion-nav-bar class="bar-calm bar-newsic player-container" align-title="center">
+  <ion-nav-bar class="bar-calm bar-custom player-container" align-title="center">
     <ion-nav-buttons side="left"><a class="button button-icon icon ion-ios-arrow-back" href="#/player"></a></ion-nav-buttons>
-    <ion-nav-title><img class="logo-small" src="img/newsic-logo-small.png"></ion-nav-title>
+    <ion-nav-title><img class="logo-small" src="img/meshmix-logo-small.png"></ion-nav-title>
   </ion-nav-bar>
 
   <ion-content>
