Removed some part because it caused a JS error

--- a/www/templates/player.html
+++ b/www/templates/player.html
@@ -33,7 +33,7 @@
             <span class="middle">Mixed</span>
           </div>
         </div>
-        <div class="col-33 control control-right" ng-click="changeColor('right'); playMediaFile(3), audioTracks[2].key)" ng-class="{'stream-active': currentStream === 'right'}">
+        <div class="col-33 control control-right" ng-click="changeColor('right'); playMediaFile(audioTracks[2].key)" ng-class="{'stream-active': currentStream === 'right'}">
           <div class="round-button">
             <span class="middle">Music</span>
             <span class="below">only</span>
